--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -501,6 +501,7 @@
           object-fit: cover;
           width: 150px;
           height: calc(150px * 1.111);
+          -webkit-clip-path: url(#hexagonalMask);
           clip-path: url(#hexagonalMask);
           filter: url(#greenOverlayFilter);
         }
